--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@trpc/react": "^9.27.4",
     "@trpc/server": "^9.27.4",
     "daisyui": "^2.31.0",
+    "ethereum-blockies-base64": "^1.0.2",
+    "ethers": "^5.7.1",
     "next": "12.3.1",
     "next-auth": "~4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "3.39.2",
     "superjson": "^1.10.0",
+    "wagmi": "^0.6.7",
     "zod": "^3.18.0"
   },
   "devDependencies": {
