--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/next": "^9.27.4",
     "@trpc/react": "^9.27.4",
     "@trpc/server": "^9.27.4",
+    "alchemy-sdk": "^2.1.0",
     "daisyui": "^2.31.0",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.7.1",
@@ -23,7 +24,7 @@
     "next-auth": "~4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "3.39.2",
+    "react-query": "^3.39.2",
     "superjson": "^1.10.0",
     "wagmi": "^0.6.7",
     "zod": "^3.18.0"
