--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
+    "@ngneat/falso": "^6.1.0",
     "@prisma/client": "^4.4.0",
     "@trpc/client": "^9.27.4",
     "@trpc/next": "^9.27.4",
