--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@trpc/server": "^9.27.4",
     "@uiball/loaders": "^1.2.6",
     "alchemy-sdk": "^2.1.0",
+    "axios": "^1.1.3",
     "daisyui": "^2.31.0",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.7.1",
