--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "daisyui": "^2.31.0",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.7.1",
+    "ipfs-http-client": "^59.0.0",
     "next": "12.3.1",
     "next-auth": "~4.10.3",
     "react": "18.2.0",
