--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
+    "react-step-progress-bar": "^1.0.3",
     "superjson": "^1.10.0",
     "wagmi": "^0.6.7",
     "zod": "^3.18.0"
