--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,14 @@
     "@trpc/server": "^9.27.4",
     "@uiball/loaders": "^1.2.6",
     "axios": "^1.1.3",
+    "cors": "^2.8.5",
     "daisyui": "^2.31.0",
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^5.7.1",
     "ipfs-http-client": "^59.0.0",
     "next": "12.3.1",
     "next-auth": "~4.10.3",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
@@ -33,6 +35,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
